test/test_examples/syntactic_examples/syntax_error/error_statement_02.zig
// Syntax error: semicolon after program sequence

const ifj = @import("ifj24.zig"); 

pub fn main() void {

};